[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nano-coder"
version = "0.1.0"
description = "A coding agent for tiny and small LLMs (<=2B params) with live streaming CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = "Apache-2.0" }

[project.scripts]
nano-coder = "nano_coding_agent:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
